--- a/config.json
+++ b/config.json
@@ -2,11 +2,18 @@
   "multiTask": true,
   "taskCount": 5,
   "proxyAddress": "",
-  "messageTemplate": "[盖瑞]今日火花[加一]\n—— [右边] 每日一言 [左边] ——\n[API]",
+  "messageTemplate": "[续火花吧]今日火花[续火花吧]\n—— [右边] 每日一言 [左边] ——\n[API]",
   "hitokotoTypes": [
+    "动画",
+    "漫画",
+    "游戏",
     "文学",
+    "原创",
+    "来自网络",
+    "其他",
     "影视",
     "诗词",
-    "哲学"
+    "哲学",
+    "抖机灵"
   ]
 }
