修改每日一言为空

--- a/config.json
+++ b/config.json
@@ -2,18 +2,7 @@
   "multiTask": true,
   "taskCount": 5,
   "proxyAddress": "",
-  "messageTemplate": "[续火花吧]续火花\n— [右边] 每日一言 [左边] —\n[API]",
+  "messageTemplate": "[续火花吧]续火花",
   "hitokotoTypes": [
-    "动画",
-    "漫画",
-    "游戏",
-    "文学",
-    "原创",
-    "来自网络",
-    "其他",
-    "影视",
-    "诗词",
-    "哲学",
-    "抖机灵"
   ]
 }
